# ko-llm-eval

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
docs/: example.md  rubric_ko.md
examples/: sample_batch.jsonl  sample_request.json
src/ko_llm_eval/: __init__.py  config.py
src/ko_llm_eval/aggregator/: __init__.py  agreement.py  confidence.py  weighted_mean.py
src/ko_llm_eval/cli/: main.py
src/ko_llm_eval/failure_detection/: __init__.py  detector.py
src/ko_llm_eval/judges/: __init__.py  base.py  korean_rubric_judge.py  llm_client.py  llm_judge.py  mock_judge.py  prompting.py  rule_judge.py
src/ko_llm_eval/metrics/: __init__.py  defaults.py  registry.py
src/ko_llm_eval/orchestrator/: batch.py  evaluator.py
src/ko_llm_eval/schemas/: __init__.py  evaluation.py
src/ko_llm_eval/storage/: __init__.py  base.py  jsonl.py
tests/unit/: test_batch.py  test_config.py  test_default_registry_multi_judges.py  test_defaults.py  test_evaluator.py  test_failure_detector.py  test_llm_client_factory.py  test_llm_judges.py  test_llm_repair.py  test_llm_response_format.py  test_mock_judge.py  test_rule_judge.py  test_schemas.py  test_smoke.py
