[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ko-llm-eval"
version = "0.1.0"
description = "Korean LLM evaluation orchestration layer with multi-judge scoring."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ko-llm-eval contributors" },
]
license = "MPL-2.0"
license-files = ["LICENSE"]
keywords = [
  "llm",
  "evaluation",
  "korean",
  "judge",
  "orchestration",
  "ai-eval",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.11,<3.0",
  "typer>=0.16,<1.0",
]

[project.urls]
Documentation = "https://github.com/your-org/ko-llm-eval"
Source = "https://github.com/your-org/ko-llm-eval"
Issues = "https://github.com/your-org/ko-llm-eval/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
ko-llm-eval = "ko_llm_eval.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/ko_llm_eval"]
